--- a/vaccumproj1.html
+++ b/vaccumproj1.html
@@ -4,7 +4,7 @@
         <title>Vaccum Manufacturing project using Flex</title>
         <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" >
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <link rel="stylesheet" type="text/css" href="mediacode.css">
+        <link rel="stylesheet" type="text/css" href="mediacode1.css">
         <style>
             /* using only CSS and flex */
             *{
