--- a/Vacuum2.html
+++ b/Vacuum2.html
@@ -9,7 +9,7 @@
             @media screen and (max-width:400px){
                 .transparenttext{
                 position: relative;
-                top:500pc;
+                margin-top:5pc;
                 font-size: 24px;
                 max-width: 270px;    
                }
