--- a/Vacuum2.html
+++ b/Vacuum2.html
@@ -8,8 +8,8 @@
         <style>
             @media screen and (max-width:400px){
                 .transparenttext{
-                position: relative;
-         
+                position: absolute;
+                top:500px;
                 font-size: 24px;
                 max-width: 270px;    
                }
