--- a/Vacuum2.html
+++ b/Vacuum2.html
@@ -6,12 +6,12 @@
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" type="text/css" href="mediavacuumcode.css">
         <style>
-            @media screen and (max-width:400px){
+            @media screen and (max-width:400px) and (max-width:500px){
                 .transparenttext{
                 position: absolute;
-                top:500px;
+                top:310em;
                 font-size: 24px;
-                max-width: 270px;    
+                max-width: 290px;    
                }
             }
             /* using only CSS and flex */
