--- a/Vacuum2.html
+++ b/Vacuum2.html
@@ -9,7 +9,7 @@
             @media screen and (max-width:400px) and (max-width:500px){
                 .transparenttext{
                 position: absolute;
-                top:310em;
+                top:810pc;
                 font-size: 24px;
                 max-width: 290px;    
                }
