--- a/Vacuum2.html
+++ b/Vacuum2.html
@@ -8,8 +8,8 @@
         <style>
             @media screen and (max-width:400px) and (max-width:500px){
                 .transparenttext{
-                position: absolute;
-                top:810pc;
+                position:relative;
+                top:100pc;
                 font-size: 24px;
                 max-width: 290px;    
                }
