--- a/products.html
+++ b/products.html
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col-md-4">
                   <div class="heading"><h2>PRODUCT 001</h2></div>
-                  <img src="sofa.jpg" width="100%" height="200px">
+                  <img src="sofa7.jpg" width="100%" height="200px">
                   <div id="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                      <br><p style="font-weight:bolder;color:lemonchiffon;background-color: rgb(119, 158, 42);float:right;position: relative;left:20px;padding-left:5px;cursor: pointer;">+</p>
                   </div>
