--- a/sampleportfolio.html
+++ b/sampleportfolio.html
@@ -33,15 +33,19 @@
         max-width:100%;
         color:white;
     }
-    .frame:hover{
-        background-color:lightskyblue;
-    }
     .frame img{
         border-radius: 50%;
         cursor: pointer;
     }
     .frame img:hover{
        opacity:0.3;
+    }
+    #tools:hover{
+       background-color: lightskyblue;
+       cursor: vertical-text;
+    }
+    i:hover{
+      opacity:0.3;
     }
   </style>
 </head>
@@ -72,19 +76,19 @@
 <div class="jumbotron">
   <div class="container-fluid text-center">
         <a name="about"></a>
-        <img src="A.jpg" class="img-responsive" style="display:inline;border-radius:50%;" alt="Akshaya" width="200px">
+        <img src="A.jpg" style="display:inline;border-radius:20em;border:2px solid white" alt="Akshaya" width="250px">
         <h1>Akshaya Devi Maheswaran</h1>      
         <p><i>Software Associate Engineer</i></p>
   </div>
 <!-- </div><br>
 <div class="scrollfixed text-center"><button style="position:fixed;width:100px;text-align:center;border:none">^</button></div> -->
 <!------------------------------------------------------------------------------------------->
-<div class="container-fluid  text-center" style="font-size: 18px;padding:5%">
+<div class="container-fluid  text-center" style="font-size: 18px;padding:5%;background-color: rgba(0, 0, 0, 0.5);">
     <p>I am an IT Professional of 1.5years having worked in both Software Testing  as well as Software Developer.</p>
     <p>Having good experience in UI applications like HTML5,CSS,Bootstrap and also worked as a QA analysts in Manual Testing in a Financial  Domain Project.</p>
     <p>Looking forward to work in a  career changing,transitional and innoviative job and to explore immense knowledge of Front-End Applications for an enhanced future.</p>
 </div>
-<div class="container-fluid  text-left" style="font-size: 18px;background-color: #ddd;padding:5%">
+<div class="container-fluid  text-left" style="font-size: 18px;background-color: #ddd;padding:5%;color:black">
     <h2 style="text-align:left;font-weight: bolder;">Roles and Responsibilites</h2>
     <ul style="list-style-type:unset;padding:20px">
         <li>I have undergone training in Front-End Applications and it's real-time impacts.</li>
@@ -96,7 +100,7 @@
     </ul>
 </div><br>
   
-<div class="container-fluid frame text-center">    
+<div class="container-fluid frame text-center" id="tools" >    
     <h2 style="text-align:center;font-weight: bolder;">Framewroks,Technologies and Project experience</h2>
   <div class="row" style="padding:5%">
     <div class="col-sm-6">
@@ -113,12 +117,12 @@
     </div>
     <div class="col-sm-12 text-center"> 
         <h1> Project Experience</h1>
-          <p style="font-size:18px;border-radius: 20%;background-color: #ddd;padding:5%">Trained as a UI Front-End Developer in Internal Project and currently persuing a certification course in Web  Full-Stack Developement .<br>Worked also in Retail-Banking Domain and its ideal is to provide bank services to customers via applications sectors like Single Account Opening,Fund Tranfer,Card Issuance. Roles involved are the QA testing people,QA leads,Subject Matter Experts and Managing Leads.</p>
+          <p style="font-size:18px;border-radius: 20%;background-color: #ddd;padding:5%;color:black">Trained as a UI Front-End Developer in Internal Project and currently persuing a certification course in Web  Full-Stack Developement .<br>Worked also in Retail-Banking Domain and its ideal is to provide bank services to customers via applications sectors like Single Account Opening,Fund Tranfer,Card Issuance. Roles involved are the QA testing people,QA leads,Subject Matter Experts and Managing Leads.</p>
     </div>
   </div>
-</div>
+</div><br><br><br><br><br><br>
 <div class="container-fluid work text-left" style="font-size: 18px;">
-  <h2 style="font-size: 25px;letter-spacing: 2px;">WORK EXPERIENCE</h2>
+  <h2 style="font-size: 25px;letter-spacing: 2px;font-weight: bolder;">WORK EXPERIENCE</h2>
   <a name="work"></a>
   <ul style="padding:5%">
   <li>Company Name: Accenture (1.5 years experience).</li>
@@ -127,7 +131,7 @@
     <strong>I was also trained in the Front-End Development Stream including stream HTML/CSS/JavaScript/Angular.</strong>
   </ul>
 </div>
-<div class="container-fluid others text-center font-weight-bold"style="background-color:#ddd">
+<div class="container-fluid others text-center font-weight-bold"style="background-color:#ddd;color:black">
     <h2>EDUCATION QUALIFICATION</h2>
     <ul style="list-style-type:none;font-size: 20px;padding:2%">
         <li>DATE OF BIRTH: &nbsp; 24-08-1996</li>
@@ -136,7 +140,7 @@
     </ul>
 </div>
 
-<div class="container-fluid contact " style="background-color:rgb(65, 60, 60);color:white;font-style: italic;">    
+<div class="container-fluid contact text-center " style="background-color: rgba(0, 0, 0, 0.5);color:white;font-style: italic;">    
   <div class="row">
     <div class="col-lg-6" > 
       <h1 class="text-center">Contact<h1>
@@ -146,7 +150,7 @@
        <p style="font-size: 18px;padding:2%">Phone no: (+91)9952060542</p> </p>
     </div>
     <div class="col-lg-6 text-center">
-        <h1 style="text-align: center;font-size: 30px;font-style: italic;">MyLinks</h1><br>
+        <h1 style="text-align: center;;font-style: italic;">MyLinks</h1><br>
             <a  id="links" style="cursor: pointer;" href="https://www.linkedin.com/in/akshaya-maheswaran-142a1512a/"><i class='fab fa-linkedin ' style='font-size:30px;color:lightseagreen'></i></a>&nbsp;&nbsp;
             <a id="links"  href="http://akshayamaheswaran.blogspot.com/"><i class='fab fa-blogger-b' style='font-size:30px;color: orange;'></i></a>
     </div>
